style: more attempts at overflow fixes

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -29,8 +29,8 @@ body {
 
         &.nav-open {
             overflow: hidden;
-            height: 100vh;
-            width: 100vw;
+            max-height: 100vh;
+            max-width: 100vw;
         }
     }
 }
@@ -42,8 +42,9 @@ main {
 
     // responsive to tablet
     @media only screen and (max-width: $tablet) {
+        max-width: 100vw;
         width: 100vw;
-        height: auto;
+        height: fit-content;
         overflow-y: visible;
     }
 }
